--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=https://www.image-heberg.fr/files/17171392624044758355.png.png">
+    <meta http-equiv="refresh" content="0; url=https://www.image-heberg.fr/files/17171392624044758355.png">
     <title>Redirecting...</title>
 </head>
 <body>
